bug squashin

--- a/css/research.css
+++ b/css/research.css
@@ -1052,6 +1052,13 @@ textarea {
     margin-bottom: 15px;
 }
 
+#view-sequence-modal ul {
+    text-align: right;
+    padding-right: 50px;
+    font-family: monospace;
+    font-size: 1.1em;
+}
+
 #report-screen .unit3-view-sequence-btn {
     font-size: 14px;
     margin-left: 15px;
